# FreeSK8-Remote-Firmware

./: CHANGELOG  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  esp-i2c.c  esp-i2c.h  espnow.c  espnow.h  main.c  user-settings.c  user-settings.h
main/lib/ADS1015/src/: ADS1015.c  ADS1015.h
main/lib/MPU6050/: esp32_i2c_rw.c  esp32_i2c_rw.h  mpu6050.c  mpu6050.h
main/lib/esp32-button/include/: button.h
main/lib/esp32-button/src/: button.c
main/lib/haptic/: haptic.c  haptic.h
main/lib/melody/: melodies.h  melody.c  melody.h  melody_notes.c  melody_notes.h
main/lib/st7789/: st7789.c  st7789.h
main/lib/vesc/: datatypes.c  datatypes.h
